# vim: set noexpandtab:

2013-02-16 Anyes
	* update to the later btag weight file 
	* Added a param to DilTri to turn off ReweightUtils. Default is on.
	* DetEta for 2L jets is now default
	
2013-02-13 Anyes
	* Fix |JVF|>0 to deal with flaoting point 

2013-02-13 Steve
	* Tagging SusyNtuple-00-00-50

2013-02-13 Matt
	* Fix for p1181 btag sf method -- typo in header and .env file

2013-02-13 Steve
	* Tagging SusyNtuple-00-00-49

2013-02-13 Matt
	* Updated 2lep jet definitions btag value to MV1_80
	* Restored 3lep ability to get p1181 sf for MV1_85 (required addition of BTagCalibp1181)

2013-02-13 Steve
	* Added isOppSign method for lep, tau
	* Added support for applying tau systematics
		* Added setState method to Tau class
		* Added support for tes_up and tes_dn in getBaselineObjects
	* Tagging SusyNtuple-00-00-48

2013-02-12 Matt
	* Updated BTagSF code (Copied and modified from SUSYTools) and modified corresponding SusyNtTools function
	* If 2lep flag is set, you will get the unbiased IP
	* Btag eff maps added (root file) along with .env file to load them properly
	* Added MV1_80 (which will be the new operating point). Now the default in get bTagSF.

2013-02-11 Matt
	* Updated central jet eta cut from 2.5 to 2.4
	* Fixed bug in initialization of DilTriggerLogic.  Fixes printouts.
	* Default trigger weight set to Moriond (changed from HCP)

2013-02-10 Steve
	* Added tau eff and electron veto SFs and uncerts
	* Added tau systematic enums: TES_UP, TES_DN
	* Added tau systematic shifts to Tau class: tes_up, tes_dn
	* Tagging SusyNtuple-00-00-47

2013-02-09 Matt
	* Updated DilTrigLogic to accomodate new mu-Met trigger
	* Updated Susy2LepCutflow so it would compile -- TODO: Tidy up 2Lep cutflow so that it can be used.
	* Updated SusyNtTools with latest jet definitions following Anyes Summary email

2013-02-09 Steve
	* Added detEta (detector eta) to jet class, which might be needed later for jvf cut

2013-02-08 Steve