@@ -1,5 +1,8 @@
 # vim: set noexpandtab:
 
+2013-02-19 Matt
+	* Updated SusyNtTools passDeadRegions to check all MC
+	
 2013-02-16 Anyes
 	* update to the later btag weight file 
 	* Added a param to DilTri to turn off ReweightUtils. Default is on.
